--- a/jnosql-driver-keep/pom.xml
+++ b/jnosql-driver-keep/pom.xml
@@ -28,7 +28,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jnosql-version>1.0.0.20220620160743</jnosql-version>
+    <jnosql-version>1.0.0.20220620160743</jnosql-version>
 	</properties>
 	
 	<repositories>
@@ -79,7 +79,13 @@
 		<dependency>
 			<groupId>org.openntf.xsp</groupId>
 			<artifactId>org.openntf.xsp.nosql.driver</artifactId>
-			<version>2.8.0-SNAPSHOT</version>
+			<version>2.12.0-SNAPSHOT</version>
+			<exclusions>
+        <exclusion>
+          <groupId>org.openntf.xsp</groupId>
+          <artifactId>org.openntf.xsp.jakartaee.osgiresourcelocator</artifactId>
+        </exclusion>
+      </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.openntf.jakarta</groupId>
