Update Keep OpenAPI to current

--- a/openapi-generator/config.yaml
+++ b/openapi-generator/config.yaml
@@ -8,3 +8,4 @@ additionalProperties:
   useRuntimeException: true
   openApiNullable: false
   microprofileRestClientVersion: "3.0"
+  useJakartaEe: true
