--- a/jnosql-driver-keep/pom.xml
+++ b/jnosql-driver-keep/pom.xml
@@ -79,7 +79,7 @@
 		<dependency>
 			<groupId>org.openntf.xsp</groupId>
 			<artifactId>org.openntf.xsp.nosql.driver</artifactId>
-			<version>2.12.0-SNAPSHOT</version>
+			<version>2.12.0</version>
 			<exclusions>
         <exclusion>
           <groupId>org.openntf.xsp</groupId>
